# EPIK-STUDIOS

./: .dockerignore  Cargo.toml  Dockerfile  README.md  cinematic_core.py  config.json  epic_studios_brain.py  main.py  requirements.txt
.github/workflows/: main.yml  publish.yml
Documents/Image-Line/FL Studio/Settings/Hardware/Epic_Controller/: device_EpicVision.py
brain/: cv_midi_bridge.py  engine.py  exporter.py  master_processor.py  scraper.py  structural_arranger.py
piano_roll/: Epic_Symphonic_Engine.py
src/: main.rs
templates/: fl_panel.html  index.html
